starting index.html

--- a/wishlist_management/public/index.html
+++ b/wishlist_management/public/index.html
@@ -6,8 +6,11 @@
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+    <a href="./management.html" >Management Children and Presents</a>
+    <h1>Wishlists for Christmas</h1>
+    <p>Welcome to Wishlist Management</p>
+
+    <p class="child-headline">Children</p>
 </body>
 
 </html>
