finish for session in school

--- a/wishlist_management/public/index.html
+++ b/wishlist_management/public/index.html
@@ -11,6 +11,18 @@
     <p>Welcome to Wishlist Management</p>
 
     <p class="child-headline">Children</p>
+
+    <table class="both-tables child-table">
+        <thead>
+            <tr class="table-row">
+                <th class="table-elements">Name</th>
+                <th class="table-elements">Age</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
 </body>
 
 </html>
