nearly complited management.html
management.html - functionallity works,
both POSTs work, but an functionallity to show errors is missing

--- a/wishlist_management/public/management.html
+++ b/wishlist_management/public/management.html
@@ -18,8 +18,8 @@
         <br>
         <input type="number" id="child-age">
         <br>
-        <button id="child-button" class="management-button">Add new Child</button>
     </form>
+    <button id="child-button" class="management-button" onClick="postChild()">Add new Child</button>
 
     <br><br>
 
@@ -42,7 +42,9 @@
         <br>
         <input type="text" id="wish-Image-URL">
         <br>
-        <button id="wish-button" class="management-button">Add new Wish</button>
     </form>
+    <button id="wish-button" class="management-button" onClick="postWish()">Add new Wish</button>
+
+<script src="/management_index.js"></script>
 </body>
 </html>
