finished the styling and tested
I finished the styling and tested everything, the last thing is that I want to implement something for errors

--- a/wishlist_management/public/index.html
+++ b/wishlist_management/public/index.html
@@ -15,8 +15,8 @@
     <table class="both-tables child-table">
         <thead>
             <tr class="table-row table-headline">
-                <th class="table-elements">Name</th>
-                <th class="table-elements">Age</th>
+                <th class="table-elements table-element-all">Name</th>
+                <th class="table-elements table-element-all">Age</th>
             </tr>
         </thead>
         <tbody id="child-tBody" onload="getChild()">
