--- a/wishlist_management/public/management.html
+++ b/wishlist_management/public/management.html
@@ -28,7 +28,9 @@
         <br>
         <label>Select Child : </label>
         <br>
-        <input type="text" id="wish-child">
+        <select text="name", id="wish-child">
+
+        </select>
         <br>
         <label>Name : </label>
         <br>
@@ -44,6 +46,9 @@
         <br>
     </form>
     <button id="wish-button" class="management-button" onClick="postWish()">Add new Wish</button>
+
+
+    <p class="error-message-text" id="error-message">Everything is fine</p>
 
 <script src="/management_index.js"></script>
 </body>
